--- a/index.html
+++ b/index.html
@@ -1,119 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sportzino Freeplay</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-950 text-white min-h-screen p-4">
-  <div class="container mx-auto max-w-4xl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sportzino Freeplay</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-gray-950 text-white min-h-screen p-4">
+    <main class="container mx-auto max-w-4xl">
+      <!-- Header Section -->
+      <header class="text-center mb-8">
+        <img
+          src="{{ url_for('static', filename='images/20250324_205248.jpg') }}"
+          alt="Sportzino Logo"
+          class="w-32 h-32 object-cover rounded-full shadow-lg ring-4 ring-yellow-500 mx-auto mb-4"
+        />
+        <h1 class="text-4xl font-bold text-yellow-400 drop-shadow-lg">
+          Welcome to Sportzino Freeplay
+        </h1>
+        <p class="text-gray-300 mt-2">
+          Claim your referral code below to start earning 🪙
+        </p>
+      </header>
 
-    <!-- Header Section -->
-    <header class="text-center mb-8">
-      <img src="{{ url_for('static', filename='images/20250324_205248.jpg') }}" alt="Sportzino Logo" class="w-32 h-32 object-cover rounded-full shadow-lg ring-4 ring-yellow-500 mx-auto mb-4">
-      <h1 class="text-4xl font-bold text-yellow-400 drop-shadow-lg">Welcome to Sportzino Freeplay</h1>
-      <p class="text-gray-300 mt-2">Claim your referral code below to start earning 🪙</p>
-    </header>
+      {% if current_user.is_authenticated %}
+      <section class="bg-gray-800 p-4 rounded-lg shadow mb-6 text-sm">
+        <p><span class="text-yellow-400 font-semibold">💰 Balance:</span> ${{ balance }}</p>
+        <p><span class="text-green-400 font-semibold">👥 Referrals:</span> {{ referrals }} people ➜ ${{ referral_earnings }} earned</p>
+        <p><span class="text-blue-400 font-semibold">🎮 Freeplay Credits:</span> ${{ freeplay_credits }}</p>
+      </section>
+      {% endif %}
 
-    <!-- Authenticated User Info -->
-    {% if current_user.is_authenticated %}
-    <div class="bg-gray-800 p-4 rounded-lg shadow mb-6 text-sm">
-      <p><span class="text-yellow-400 font-semibold">💰 Balance:</span> ${{ balance }}</p>
-      <p><span class="text-green-400 font-semibold">👥 Referrals:</span> {{ referrals }} people ➜ ${{ referral_earnings }} earned</p>
-      <p><span class="text-blue-400 font-semibold">🎮 Freeplay Credits:</span> ${{ freeplay_credits }}</p>
-    </div>
-    {% endif %}
+      <!-- Referral Form -->
+      <section class="bg-gray-800 p-6 rounded-xl shadow-lg space-y-4 mb-6">
+        <form method="POST" action="{{ url_for('submit') }}" enctype="multipart/form-data">
+          <input type="text" name="name" placeholder="Full Name" autocomplete="off"
+            required class="w-full px-4 py-3 rounded bg-gray-900 border border-gray-700 text-white focus:ring-2 focus:ring-yellow-400" />
+          <input type="email" name="email" placeholder="Email Address" autocomplete="off"
+            required class="w-full px-4 py-3 rounded bg-gray-900 border border-gray-700 text-white focus:ring-2 focus:ring-yellow-400" />
+          
+          <label class="block text-sm text-gray-400">Upload Profile Picture</label>
+          <input type="file" name="image" accept="image/*"
+            class="w-full px-4 py-2 bg-gray-900 border border-gray-700 text-gray-300 rounded" />
+          
+          <button type="submit"
+            class="w-full py-3 bg-yellow-400 hover:bg-yellow-500 text-black font-bold rounded shadow-md transition">
+            Get My Referral Code
+          </button>
+        </form>
+      </section>
 
-    <!-- Referral Form -->
-    <form method="POST" action="{{ url_for('submit') }}" enctype="multipart/form-data" class="bg-gray-800 p-6 rounded-xl shadow-lg space-y-4 mb-6">
-      <input type="text" name="name" placeholder="Full Name" required class="w-full px-4 py-3 rounded bg-gray-900 border border-gray-700 text-white focus:ring-2 focus:ring-yellow-400">
-      <input type="email" name="email" placeholder="Email Address" required class="w-full px-4 py-3 rounded bg-gray-900 border border-gray-700 text-white focus:ring-2 focus:ring-yellow-400">
-      <input type="file" name="image" accept="image/*" class="w-full text-gray-300">
-      <button type="submit" class="w-full py-3 bg-yellow-400 hover:bg-yellow-500 text-black font-bold rounded shadow-md transition">
-        Get My Referral Code
-      </button>
-    </form>
+      <!-- Referral Link -->
+      {% if referral_link %}
+      <section class="text-center mb-10">
+        <input type="text" id="referralLink" value="{{ referral_link }}" readonly
+          class="text-black px-4 py-2 rounded bg-gray-300 w-full md:w-2/3 mx-auto mb-2" />
+        <button onclick="copyReferral()"
+          class="bg-yellow-400 hover:bg-yellow-500 text-black px-4 py-2 rounded font-semibold shadow">
+          Copy Referral Link
+        </button>
+      </section>
+      {% endif %}
 
-    <!-- Referral Link Copy Section -->
-    {% if referral_link %}
-    <div class="text-center mb-10">
-      <input type="text" id="referralLink" value="{{ referral_link }}" readonly class="text-black px-4 py-2 rounded bg-gray-300 w-2/3 mb-2">
-      <button onclick="copyReferral()" class="bg-yellow-400 hover:bg-yellow-500 text-black px-4 py-2 rounded font-semibold shadow">
-        Copy Referral Link
-      </button>
-    </div>
-    {% endif %}
+      <!-- Leaderboard Section -->
+      <section id="leaderboard" class="bg-gray-900 rounded-xl shadow p-6 mb-10">
+        <h2 class="text-xl font-bold text-yellow-300 mb-4">🏆 Top Referrers</h2>
+        <ol class="list-decimal list-inside space-y-2">
+          {% for person in leaderboard %}
+          <li class="flex items-center gap-2">
+            <img src="{{ url_for('static', filename='flags/' + person.country + '.svg') }}"
+              alt="Flag of {{ person.country }}" class="w-5 h-5" />
+            <span class="text-white font-semibold">{{ person.name }}</span> – ${{ person.amount }} earned
+          </li>
+          {% endfor %}
+        </ol>
+      </section>
 
-    <!-- Leaderboard -->
-    <div class="bg-gray-900 rounded-xl shadow p-6 mb-10">
-      <h2 class="text-xl font-bold text-yellow-300 mb-4">🏆 Top Referrers</h2>
-      <ol class="list-decimal list-inside space-y-2">
-        {% for person in leaderboard %}
-        <li class="flex items-center gap-2">
-          <img src="{{ url_for('static', filename='flags/' + person.country + '.svg') }}" alt="Flag of {{ person.country }}" class="w-5 h-5">
-          <span class="text-white font-semibold">{{ person.name }}</span> – ${{ person.amount }} earned
-        </li>
-        {% endfor %}
-      </ol>
-    </div>
-
-    <!-- Crypto Donation Section -->
-    <div class="bg-gray-900 rounded-xl shadow p-6 mb-10">
-      <h2 class="text-xl font-bold text-yellow-300 mb-4">💸 Support with Crypto</h2>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-6 text-sm text-gray-300">
-        <div class="text-center">
-          <h3 class="font-semibold text-yellow-400 mb-2">Bitcoin (BTC)</h3>
-          <img src="{{ url_for('static', filename='images/btc_qr.png') }}" alt="BTC QR Code" class="mx-auto w-32 h-32">
-          <p class="break-all mt-2">15HfktH6MgXoXrJ5GDxdnqJSPZj9Cw63gs</p>
-        </div>
-        <div class="text-center">
-          <h3 class="font-semibold text-yellow-400 mb-2">Solana (SOL)</h3>
-          <img src="{{ url_for('static', filename='images/sol_qr.png') }}" alt="SOL QR Code" class="mx-auto w-32 h-32">
-          <p class="break-all mt-2">GGB2reUT34H2LY5DYuPFhe5CT9ZRHCFBepHfC1zBGKi5</p>
-        </div>
-        <div class="text-center">
-          <h3 class="font-semibold text-yellow-400 mb-2">Ethereum (ETH)</h3>
-          <img src="{{ url_for('static', filename='images/eth_qr.png') }}" alt="ETH QR Code" class="mx-auto w-32 h-32">
-          <p class="break-all mt-2">0x8a9d45fc29c87685b124d2c246ab56bee8daa825</p>
-        </div>
+      <!-- Social Share Buttons -->
+      <div class="flex flex-wrap justify-center gap-4 mt-6 mb-10">
+        <button onclick="shareLink('whatsapp')" class="bg-green-500 text-white px-4 py-2 rounded-xl shadow">Share on WhatsApp</button>
+        <button onclick="shareLink('x')" class="bg-blue-600 text-white px-4 py-2 rounded-xl shadow">Share on X</button>
+        <button onclick="shareLink('facebook')" class="bg-blue-800 text-white px-4 py-2 rounded-xl shadow">Share on Facebook</button>
+        <button onclick="shareLink('telegram')" class="bg-cyan-600 text-white px-4 py-2 rounded-xl shadow">Share on Telegram</button>
       </div>
-    </div>
 
-    <!-- Cash App Deposit Instructions -->
-    <div class="bg-gray-900 rounded-xl shadow p-6 mb-10 text-sm text-gray-300">
-      <h2 class="text-xl font-bold text-yellow-300 mb-4">💵 Deposit Paper Money via Cash App</h2>
-      <p class="mb-2">To deposit cash into our Cash App account, follow these steps:</p>
-      <ol class="list-decimal list-inside space-y-1 mb-4">
-        <li>Open the Cash App on your mobile device.</li>
-        <li>Tap the Banking tab on the home screen.</li>
-        <li>Select Paper Money.</li>
-        <li>Use the map to find a nearby participating retailer (e.g., 7-Eleven, Walgreens, Walmart, CVS).</li>
-        <li>Tap Show Barcode to generate your unique deposit barcode.</li>
-        <li>Visit the selected store and inform the cashier you'd like to deposit cash into your Cash App account.</li>
-        <li>Present the barcode and hand over the cash.</li>
-        <li>Confirm the transaction and keep the receipt.</li>
-      </ol>
-      <p><strong>Minimum deposit:</strong> $5</p>
-      <p><strong>Maximum per deposit:</strong> $500</p>
-      <p><strong>Weekly limit:</strong> $1,000</p>
-      <p><strong>Monthly limit:</strong> $4,000</p>
-      <p class="mt-2"><strong>Note:</strong> A $1 fee may apply per deposit transaction.</p>
-    </div>
+      <!-- Background Music -->
+      <audio id="bg-music" loop autoplay muted>
+        <source src="https://www.bensound.com/bensound-music/bensound-sunny.mp3" type="audio/mpeg" />
+        Your browser does not support the audio element.
+      </audio>
 
-    <!-- Footer -->
-    <footer class="text-center text-sm text-gray-500">
-      <p>© 2025 Sportzino</p>
-    </footer>
+      <!-- Footer -->
+      <footer class="mt-8 text-sm text-gray-500 text-center">
+        Powered by <span class="text-yellow-400 font-semibold">Sportzino</span>
+      </footer>
+    </main>
 
-  </div>
+    <!-- Scripts -->
+    <script>
+      function copyReferral() {
+        const copyText = document.getElementById("referralLink");
+        copyText.select();
+        copyText.setSelectionRange(0, 99999); // For mobile devices
+        document.execCommand("copy");
 
-  <script>
-    function copyReferral() {
-      const link = document.getElementById("referralLink");
-      navigator.clipboard.writeText(link.value);
-      alert("Referral link copied!");
-    }
-  </script>
-</body>
+        const btn = document.querySelector("button[onclick='copyReferral()']");
+        btn.textContent = "Link Copied!";
+        setTimeout(() => (btn.textContent = "Copy Referral Link"), 2000);
+      }
+
+      function shareLink(platform) {
+        const link = document.getElementById("referralLink")?.value || window.location.href;
+        let shareURL = "";
+
+        switch (platform) {
+          case "whatsapp":
+            shareURL = `https://wa.me/?text=${encodeURIComponent(link)}`;
+            break;
+          case "x":
+            shareURL = `https://twitter.com/intent/tweet?url=${encodeURIComponent(link)}`;
+            break;
+          case "facebook":
+            shareURL = `https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(link)}`;
+            break;
+          case "telegram":
+            shareURL = `https://t.me/share/url?url=${encodeURIComponent(link)}`;
+            break;
+        }
+
+        window.open(shareURL, "_blank");
+      }
+    </script>
+  </body>
 </html>
